@@ -1,0 +1,2 @@
+require("minfi") || stop("unable to load minfi")
+BiocGenerics:::testPackage("minfi")
